@@ -2,10 +2,12 @@ package com.example.iquiz.service;
 
 import com.example.iquiz.dto.learningUnit.CourseDto;
 import com.example.iquiz.dto.learningUnit.LearningUnitDto;
+import com.example.iquiz.dto.learningUnit.LearningUnitTreeDto;
 import com.example.iquiz.entity.Exercise;
 import com.example.iquiz.entity.LearningUnit;
 import com.example.iquiz.entity.LearningUnitType;
 import com.example.iquiz.mapper.LearningUnitMapper;
+import com.example.iquiz.mapper.LearningUnitTreeMapper;
 import com.example.iquiz.mapper.LearningUnitTypeMapper;
 import com.example.iquiz.repository.ExerciseRepository;
 import com.example.iquiz.repository.LearningUnitRepository;
@@ -13,6 +15,7 @@ import com.example.iquiz.repository.LearningUnitTypeRepository;
 import com.example.iquiz.repository.SubmissionRepository;
 import com.example.iquiz.utility.LearningUnitUtil;
 import jakarta.persistence.EntityNotFoundException;
+import lombok.RequiredArgsConstructor;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
@@ -23,103 +26,98 @@ import java.util.List;
 import java.util.stream.Collectors;
 
 @Service
+@RequiredArgsConstructor
 public class LearningUnitService {
 
-    @Autowired
-    private LearningUnitRepository learningUnitRepository;
+    private final LearningUnitRepository learningUnitRepository;
+    private final LearningUnitTypeRepository learningUnitTypeRepository;
+    private final LearningUnitMapper learningUnitMapper;
+    private final ExerciseRepository exerciseRepository;
+    private final LearningUnitUtil learningUnitUtil;
+    private final LearningUnitTreeMapper treeMapper;
 
-    @Autowired
-    private LearningUnitTypeRepository learningUnitTypeRepository;
 
-    @Autowired
-    private LearningUnitMapper learningUnitMapper;
-
-    @Autowired
-    private ExerciseRepository exerciseRepository;
-
-    @Autowired
-    private LearningUnitUtil learningUnitUtil;
-
-    private final int NUMBER_OF_EXERCISE = 5;
-
-    public List<LearningUnitDto> getAllLearningUnitTypes() {
-        return learningUnitRepository.findAll().stream().
-                map(learningUnit -> learningUnitMapper.toDto(learningUnit))
+    public List<LearningUnitDto> getAllLearningUnits() {
+        return learningUnitRepository.findAll().stream()
+                .map(learningUnitMapper::toDto)
                 .toList();
     }
 
     public LearningUnitDto getLearningUnitById(Long id, Long userId) {
         LearningUnit learningUnit = learningUnitRepository.findById(id)
                 .orElseThrow(() -> new EntityNotFoundException("Learning Unit not found with id: " + id));
-
-        List<Exercise> allUnsubmitted = exerciseRepository
-                .findUnsubmittedExercisesByUserIdAndUnitId(learningUnit.getId(), userId);
-        if (allUnsubmitted.size() >= NUMBER_OF_EXERCISE) {
-            Collections.shuffle(allUnsubmitted);
-
-            List<Exercise> selected = allUnsubmitted.stream()
-                    .limit(NUMBER_OF_EXERCISE)
-                    .toList();
-            learningUnit.setExercises(selected);
-        }
+        // chỉ trả metadata, không random exercise ở đây
         return learningUnitMapper.toDto(learningUnit, userId);
     }
 
-    public LearningUnitDto saveLearningUnit(LearningUnitDto learningUnitDto) {
-        LearningUnit learningUnit = learningUnitMapper.toEntity(learningUnitDto);
 
-        learningUnit = learningUnitRepository.save(learningUnit);
-        return learningUnitMapper.toDto(learningUnit);
+    public LearningUnitTreeDto getLearningUnitWithChildren(Long courseId) {
+        LearningUnit course = learningUnitRepository.findById(courseId)
+                .orElseThrow(() -> new EntityNotFoundException("Course not found with id " + courseId));
+        return treeMapper.toTreeDto(course);
     }
 
 
+    public LearningUnitDto saveLearningUnit(LearningUnitDto dto) {
+        LearningUnit entity = learningUnitMapper.toEntity(dto);
+        entity = learningUnitRepository.save(entity);
+        return learningUnitMapper.toDto(entity);
+    }
+
     public LearningUnitDto updateLearningUnit(Long id, LearningUnitDto dto) {
         LearningUnit learningUnit = learningUnitRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Learning Unit not found with id: " + id));
+                .orElseThrow(() -> new EntityNotFoundException("Learning Unit not found with id: " + id));
 
-        LearningUnitType type = learningUnitTypeRepository.findByName(dto.type());
-        learningUnit.setType(type);
+        if (dto.id() != null) {
+            LearningUnitType type = learningUnitTypeRepository.findById(dto.id())
+                    .orElseThrow(() -> new EntityNotFoundException("Type not found"));
+            learningUnit.setType(type);
+        }
 
-        LearningUnit parent = learningUnitRepository.findById(dto.parentId()).orElse(null);
-        learningUnit.setParent(parent);
+        if (dto.parentId() != null) {
+            LearningUnit parent = learningUnitRepository.findById(dto.parentId())
+                    .orElseThrow(() -> new EntityNotFoundException("Parent not found"));
+            learningUnit.setParent(parent);
+        }
 
         learningUnit.setName(dto.name());
         learningUnit.setCode(dto.code());
         learningUnit.setDescription(dto.description());
         learningUnit.setStatus(dto.status());
+
         learningUnit = learningUnitRepository.save(learningUnit);
         return learningUnitMapper.toDto(learningUnit);
     }
 
+    public void deleteLearningUnit(Long id) {
+        if (!learningUnitRepository.existsById(id)) {
+            throw new EntityNotFoundException("Learning Unit not found with id: " + id);
+        }
+        learningUnitRepository.deleteById(id);
+    }
 
     public List<LearningUnitDto> getLearningUnitsByTypeLevel(int level) {
-        List<LearningUnit> learningUnits = learningUnitRepository.findByTypeLevel(level);
-        return learningUnits.stream().map(learningUnit -> learningUnitMapper.toDto(learningUnit)).collect(Collectors.toList());
+        return learningUnitRepository.findByTypeLevel(level).stream()
+                .map(learningUnitMapper::toDto)
+                .toList();
     }
 
     public long countByLearningUnitId(Long id) {
-        LearningUnit learningUnit = learningUnitRepository.findById(id).orElseThrow(() -> new NullPointerException("Learning Unit not found with id: " + id));
+        LearningUnit learningUnit = learningUnitRepository.findById(id)
+                .orElseThrow(() -> new EntityNotFoundException("Learning Unit not found with id: " + id));
         return learningUnitUtil.countExercises(learningUnit);
     }
 
     public List<CourseDto> getAllCoursesWithUserId(Long userId) {
-        List<CourseDto> courseList = new ArrayList<>();
-
-        List<LearningUnit> courses = learningUnitRepository.findByTypeLevel(1);
-
-        for (LearningUnit learningUnit : courses) {
-            Long totalExercise = learningUnitUtil.countExercises(learningUnit);
-            Long completedExercises = learningUnitUtil.getNumberOfCompletedExercise(userId, learningUnit);
-            courseList.add(new CourseDto(
-                    learningUnit.getId(),
-                    learningUnit.getName(),
-                    learningUnit.getCode(),
-                    totalExercise,
-                    completedExercises
-            ));
-        }
-
-        return courseList;
+        return learningUnitRepository.findByTypeLevel(1).stream()
+                .map(course -> new CourseDto(
+                        course.getId(),
+                        course.getName(),
+                        course.getCode(),
+                        learningUnitUtil.countExercises(course),
+                        learningUnitUtil.getNumberOfCompletedExercise(userId, course)
+                ))
+                .toList();
     }
-
 }
+
